Styling of start page and board page done. Player VS Computer gameMode done.

--- a/src/template.html
+++ b/src/template.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Battleships</title>
-</head>
-<body>
-    <h1>Hello world</h1>
-    
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Battleships</title>
+    </head>
+    <body>
+        <!-- <div class="start-screen">
+            <h1>BATTLESHIP</h1>
+            <div class="select-gamemode">
+                <p>Select GameMode</p>
+                <button class="player-vs-computer">Player VS Computer</button>
+                <button class="player-vs-player">Player VS Player</button>
+            </div>
+        </div> -->
+
+        <!-- <div class="player-board-view">
+            <header>
+                <h1>Battleship</h1>
+                <div>
+                    <button>GO TO START MENU</button>
+                    <button>RESET</button>
+                </div>
+            </header>
+            <div class="player-boards">
+                <div class="first-player">
+                    <div class ="first-player-grid">
+                        
+                    </div>
+                </div>
+                <div class="secound-player">
+                    <div class="secound-player-grid">
+
+                    </div>
+                </div>
+            </div>
+        </div> -->
+    </body>
 </html>
